Fix review index styling for text wrap

--- a/app/assets/stylesheets/components/business_show.scss
+++ b/app/assets/stylesheets/components/business_show.scss
@@ -13,7 +13,6 @@
 .business-details {
   display: flex;
   flex-direction: column;
-  width: 50%;
   padding-left: 20px;
 }
 
