--- a/app/assets/stylesheets/components/review_index_item.scss
+++ b/app/assets/stylesheets/components/review_index_item.scss
@@ -5,7 +5,6 @@
 }
 
 .recommended-reviews {
-  display: flex;
   color: #d32323;
   font-weight: bold;
   font-size: 21px;
@@ -17,7 +16,6 @@
 }
 
 .business-review-name {
-  margin-left: 5px;
   font-weight: normal;
   color: #333;
 }
